--- a/style/custom-style.css
+++ b/style/custom-style.css
@@ -5,11 +5,133 @@ body {
   color: #111625;
   font-size: 1rem; }
 
+.bRadius {
+  border-radius: 0.5rem; }
+
+.bgColor--purple {
+  background-color: #59358C; }
+
+.bgColor--saffron {
+  background-color: #EFC031; }
+
+.fontColor--purple {
+  color: #59358C; }
+
+.fz--h1 {
+  font-size: 3.438rem; }
+
+.fz--h2 {
+  font-size: 2.813rem; }
+
+.fz--h3 {
+  font-size: 2.375rem; }
+
+@media (min-width: 576px) {
+  .w-sm-25 {
+    width: 25% !important; }
+  .w-sm-50 {
+    width: 50% !important; }
+  .w-sm-75 {
+    width: 75% !important; }
+  .w-sm-100 {
+    width: 100% !important; }
+  .w-sm-auto {
+    width: auto !important; }
+  .h-sm-25 {
+    height: 25% !important; }
+  .h-sm-50 {
+    height: 50% !important; }
+  .h-sm-75 {
+    height: 75% !important; }
+  .h-sm-100 {
+    height: 100% !important; }
+  .h-sm-auto {
+    height: auto !important; } }
+
+@media (min-width: 768px) {
+  .w-md-25 {
+    width: 25% !important; }
+  .w-md-50 {
+    width: 50% !important; }
+  .w-md-75 {
+    width: 75% !important; }
+  .w-md-100 {
+    width: 100% !important; }
+  .w-md-auto {
+    width: auto !important; }
+  .h-md-25 {
+    height: 25% !important; }
+  .h-md-50 {
+    height: 50% !important; }
+  .h-md-75 {
+    height: 75% !important; }
+  .h-md-100 {
+    height: 100% !important; }
+  .h-md-auto {
+    height: auto !important; } }
+
+@media (min-width: 992px) {
+  .w-lg-25 {
+    width: 25% !important; }
+  .w-lg-50 {
+    width: 50% !important; }
+  .w-lg-75 {
+    width: 75% !important; }
+  .w-lg-100 {
+    width: 100% !important; }
+  .w-lg-auto {
+    width: auto !important; }
+  .h-lg-25 {
+    height: 25% !important; }
+  .h-lg-50 {
+    height: 50% !important; }
+  .h-lg-75 {
+    height: 75% !important; }
+  .h-lg-100 {
+    height: 100% !important; }
+  .h-lg-auto {
+    height: auto !important; } }
+
+@media (min-width: 1200px) {
+  .w-xl-25 {
+    width: 25% !important; }
+  .w-xl-50 {
+    width: 50% !important; }
+  .w-xl-75 {
+    width: 75% !important; }
+  .w-xl-100 {
+    width: 100% !important; }
+  .w-xl-auto {
+    width: auto !important; }
+  .h-xl-25 {
+    height: 25% !important; }
+  .h-xl-50 {
+    height: 50% !important; }
+  .h-xl-75 {
+    height: 75% !important; }
+  .h-xl-100 {
+    height: 100% !important; }
+  .h-xl-auto {
+    height: auto !important; } }
+
+.largeImage h3 {
+  left: 70px;
+  top: 10px; }
+
+.header--corner {
+  position: absolute;
+  top: 0;
+  left: 15px;
+  width: 700px;
+  min-height: 200px;
+  -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 25%, 75% 0);
+  clip-path: polygon(0 0, 0 100%, 100% 0%, 100% 0%, 75% 0);
+  background: #59358C; }
+
 .exampleBlock {
   width: 100%;
   display: inline-block;
-  background: white;
-  margin-right: 4rem; }
+  background: white; }
 
 .shadow {
   box-shadow: 6px 6px 6px rgba(0, 0, 0, 0.25); }
@@ -49,16 +171,16 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0; }
 
 h1 {
-  font-size: 2.5rem; }
+  font-size: 3.438rem; }
 
 h2 {
-  font-size: 2rem; }
+  font-size: 2.813rem; }
 
 h3 {
-  font-size: 1.75rem; }
+  font-size: 2.375rem; }
 
 h4 {
-  font-size: 1.5rem; }
+  font-size: 1.75rem; }
 
 h5 {
   font-size: 1.25rem; }
@@ -69,24 +191,21 @@ h6 {
 @media screen and (min-width: 641px) {
   h1 {
     font-size: 3.125rem; }
-
   h2 {
     font-size: 2.5rem; }
-
   h3 {
     font-size: 1.875rem; } }
+
 @media screen and (min-width: 787px) {
   h1 {
     font-size: 4.25rem; }
-
   h2 {
     font-size: 3.25rem; }
-
   h3 {
     font-size: 2.375rem; }
-
   h4 {
     font-size: 1.75rem; } }
+
 button {
   outline: none;
   position: relative;
@@ -137,11 +256,3 @@ button:active {
 button:disabled {
   opacity: 0.5;
   pointer-events: none; }
-
-.bRadius {
-  border-radius: 0.5rem; }
-
-.bgColor_purple {
-  background-color: #59358C; }
-
-/*# sourceMappingURL=custom-style.css.map */
