--- a/style/custom-style.scss
+++ b/style/custom-style.scss
@@ -48,8 +48,14 @@ body{
   &--h3{
     font-size: 2.375rem;//35px
   }
+  &--h4{
+    font-size: 1.75rem;
+  }
   &--lgBody{
     font-size: 1.375rem;
+  }
+  &--smBody{
+    font-size: 0.9375rem;
   }
 }
 
@@ -117,15 +123,20 @@ body{
 
 
 .accordion{
+  .card{
+    border-radius:0px;
+    border:0;
+  }
   .card-header{
     padding: 0;
     #accordbtn{
+      border-radius:10px;
       background-color: #000000;
       width: 100%;
       height: 100%;
       text-align: left;
       text-transform: uppercase;
-      padding: 16px 19px;
+      padding: 10px 19px;
       img{
         transform: rotate(180deg);
       }
@@ -145,6 +156,32 @@ body{
 
 //Hospitality end
 
+
+//Contact Form
+
+.contactForm{
+  input,textarea{
+    width: 100%;
+    border: 0;
+    margin-bottom: 10px;
+    padding: 10px 13px;
+  }
+  .wpcf7-submit{
+    background-color: transparent;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    color: #ffffff;
+    max-width: 140px;
+    &:hover{
+      background-color: #ffffff;
+      color: $purple;
+    }
+  }
+}
+
+
+
+//Contact Form end
 
 //Flybe styles
 
