--- a/style/custom-style.css
+++ b/style/custom-style.css
@@ -3,7 +3,7 @@
 
 body {
   color: #5D5D5D;
-  font-size: 1rem;
+  font-size: 22px;
   font-family: century-gothic, sans-serif;
   font-style: normal;
   font-weight: 400; }
@@ -13,28 +13,26 @@ body {
 
 .bgColor--purple {
   background-color: #59358C; }
+
 .bgColor--saffron {
   background-color: #EFC031; }
+
 .bgColor--grey {
   background-color: #C4C4C4; }
 
 .fontColor--purple {
   color: #59358C; }
 
-.fz--h1 {
-  font-size: 3.438rem; }
-.fz--h2 {
-  font-size: 2.813rem; }
-.fz--h3 {
-  font-size: 2.375rem; }
-.fz--h4 {
-  font-size: 1.75rem; }
 .fz--lgBody {
   font-size: 1.375rem; }
-.fz--smBody {
-  font-size: 0.9375rem; }
 
-.largeImage h3 {
+.fz--smBody {
+  font-size: 0.875rem; }
+
+.fw-b {
+  font-weight: 700; }
+
+.largeImage h3, .largeImage .fz--h3 {
   left: 70px;
   top: 10px; }
 
@@ -43,10 +41,13 @@ body {
   top: 0;
   left: 15px;
   width: 700px;
-  min-height: 200px;
+  min-height: 220px;
   -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 25%, 75% 0);
   clip-path: polygon(0 0, 0 100%, 100% 0%, 100% 0%, 75% 0);
   background: #59358C; }
+
+.nav-link {
+  font-size: 0.6667rem; }
 
 .rooms_single {
   display: flex;
@@ -55,7 +56,7 @@ body {
     border: 1px solid #59358C;
     height: 100%;
     position: relative; }
-    .rooms_single_content h4:last-of-type {
+    .rooms_single_content h5:last-of-type, .rooms_single_content .fz--h5:last-of-type {
       position: absolute;
       bottom: 0;
       left: 0;
@@ -67,6 +68,7 @@ body {
 .accordion .card {
   border-radius: 0px;
   border: 0; }
+
 .accordion .card-header {
   padding: 0; }
   .accordion .card-header #accordbtn {
@@ -91,6 +93,7 @@ body {
   border: 0;
   margin-bottom: 10px;
   padding: 10px 13px; }
+
 .contactForm .wpcf7-submit {
   background-color: transparent;
   border: 2px solid #fff;
@@ -128,66 +131,63 @@ small {
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-size: 24px; }
 
 *, *:before, *:after {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, .fz--h1, h2, .fz--h2, h3, .fz--h3, h4, .fz--h4, h5, .fz--h5, h6 {
   font-family: 'Comfortaa', cursive;
   font-weight: 700;
   margin: 4rem 0 2rem;
-  color: #111625;
   padding: 0; }
 
-h1 {
-  font-size: 3.438rem; }
+h1, .fz--h1 {
+  font-size: 2.5rem; }
 
-h2 {
-  font-size: 2.813rem; }
+h2, .fz--h2 {
+  font-size: 2rem; }
 
-h3 {
-  font-size: 2.375rem; }
-
-h4 {
+h3, .fz--h3 {
   font-size: 1.75rem; }
 
-h5 {
+h4, .fz--h4 {
+  font-size: 1.5rem; }
+
+h5, .fz--h5 {
   font-size: 1.25rem; }
 
 h6 {
   font-size: 1rem; }
 
 @media screen and (min-width: 641px) {
-  h1 {
+  h1, .fz--h1 {
     font-size: 3.125rem; }
-
-  h2 {
+  h2, .fz--h2 {
     font-size: 2.5rem; }
-
-  h3 {
+  h3, .fz--h3 {
     font-size: 1.875rem; } }
+
 @media screen and (min-width: 787px) {
-  h1 {
+  h1, .fz--h1 {
     font-size: 4.25rem; }
-
-  h2 {
+  h2, .fz--h2 {
     font-size: 3.25rem; }
-
-  h3 {
+  h3, .fz--h3 {
     font-size: 2.375rem; }
-
-  h4 {
+  h4, .fz--h4 {
     font-size: 1.75rem; } }
+
 .flybe button {
   outline: none;
   position: relative;
   font-size: 1rem;
   line-height: 1;
   min-height: 40px;
-  padding: 0.75rem 1.25rem 0.5rem;
+  padding: 0.55rem 1rem 0.5rem;
   border-radius: 0.5rem;
   margin: 1rem 1rem;
   font-family: 'Comfortaa', cursive;
@@ -201,10 +201,12 @@ h6 {
   border: 2px solid #524195;
   background: transparent;
   color: #524195; }
+
 .flybe .primary {
   font-size: 1.25rem;
   border-radius: 1rem;
   height: 60px; }
+
 .flybe .primary {
   border: none;
   color: #111625;
@@ -213,16 +215,19 @@ h6 {
   background: -webkit-linear-gradient(left, #f7a11d 0%, #efc031 100%);
   background: linear-gradient(to right, #f7a11d 0%, #efc031 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7a11d', endColorstr='#efc031',GradientType=1 ); }
+
 .flybe button:hover {
   -webkit-box-shadow: 0px 5px 20px -1px rgba(17, 22, 37, 0.5);
   -moz-box-shadow: 0px 5px 20px -1px rgba(17, 22, 37, 0.5);
   box-shadow: 0px 5px 20px -1px rgba(17, 22, 37, 0.5);
   top: -3px; }
+
 .flybe button:active {
   -webkit-box-shadow: 0px 2px 10px -1px rgba(17, 22, 37, 0.5);
   -moz-box-shadow: 0px 2px 10px -1px rgba(17, 22, 37, 0.5);
   box-shadow: 0px 2px 10px -1px rgba(17, 22, 37, 0.5);
   top: -1px; }
+
 .flybe button:disabled {
   opacity: 0.5;
   pointer-events: none; }
@@ -230,122 +235,102 @@ h6 {
 @media (min-width: 576px) {
   .w-sm-25 {
     width: 25% !important; }
-
   .w-sm-50 {
     width: 50% !important; }
-
   .w-sm-75 {
     width: 75% !important; }
-
   .w-sm-100 {
     width: 100% !important; }
-
   .w-sm-auto {
     width: auto !important; }
-
   .h-sm-25 {
     height: 25% !important; }
-
   .h-sm-50 {
     height: 50% !important; }
-
   .h-sm-75 {
     height: 75% !important; }
-
   .h-sm-100 {
     height: 100% !important; }
-
   .h-sm-auto {
     height: auto !important; } }
+
 @media (min-width: 768px) {
   .w-md-25 {
     width: 25% !important; }
-
   .w-md-50 {
     width: 50% !important; }
-
   .w-md-75 {
     width: 75% !important; }
-
   .w-md-100 {
     width: 100% !important; }
-
   .w-md-auto {
     width: auto !important; }
-
   .h-md-25 {
     height: 25% !important; }
-
   .h-md-50 {
     height: 50% !important; }
-
   .h-md-75 {
     height: 75% !important; }
-
   .h-md-100 {
     height: 100% !important; }
-
   .h-md-auto {
     height: auto !important; } }
+
 @media (min-width: 992px) {
   .w-lg-25 {
     width: 25% !important; }
-
   .w-lg-50 {
     width: 50% !important; }
-
   .w-lg-75 {
     width: 75% !important; }
-
   .w-lg-100 {
     width: 100% !important; }
-
   .w-lg-auto {
     width: auto !important; }
-
   .h-lg-25 {
     height: 25% !important; }
-
   .h-lg-50 {
     height: 50% !important; }
-
   .h-lg-75 {
     height: 75% !important; }
-
   .h-lg-100 {
     height: 100% !important; }
-
   .h-lg-auto {
     height: auto !important; } }
+
 @media (min-width: 1200px) {
   .w-xl-25 {
     width: 25% !important; }
-
   .w-xl-50 {
     width: 50% !important; }
-
   .w-xl-75 {
     width: 75% !important; }
-
   .w-xl-100 {
     width: 100% !important; }
-
   .w-xl-auto {
     width: auto !important; }
-
   .h-xl-25 {
     height: 25% !important; }
-
   .h-xl-50 {
     height: 50% !important; }
-
   .h-xl-75 {
     height: 75% !important; }
-
   .h-xl-100 {
     height: 100% !important; }
-
   .h-xl-auto {
     height: auto !important; } }
 
-/*# sourceMappingURL=custom-style.css.map */
+@media (max-width: 991px) {
+  .header--corner {
+    position: relative;
+    width: 100%;
+    left: 0;
+    clip-path: none;
+    min-height: unset; }
+    .header--corner h4, .header--corner .fz--h4 {
+      margin-top: 0 !important;
+      text-align: center;
+      padding: 10px 0;
+      margin-left: 0; }
+      .header--corner h4 br, .header--corner .fz--h4 br {
+        display: none; } }
