--- a/style/custom-style.css
+++ b/style/custom-style.css
@@ -13,10 +13,8 @@ body {
 
 .bgColor--purple {
   background-color: #59358C; }
-
 .bgColor--saffron {
   background-color: #EFC031; }
-
 .bgColor--grey {
   background-color: #C4C4C4; }
 
@@ -25,7 +23,6 @@ body {
 
 .fz--lgBody {
   font-size: 1.375rem; }
-
 .fz--smBody {
   font-size: 0.875rem; }
 
@@ -49,6 +46,14 @@ body {
 .nav-link {
   font-size: 0.6667rem; }
 
+.active .nav-link {
+  background-color: #fff;
+  border-radius: 10px;
+  color: #59358C !important; }
+
+.footer a {
+  color: inherit; }
+
 .rooms_single {
   display: flex;
   flex-direction: column; }
@@ -68,7 +73,6 @@ body {
 .accordion .card {
   border-radius: 0px;
   border: 0; }
-
 .accordion .card-header {
   padding: 0; }
   .accordion .card-header #accordbtn {
@@ -93,7 +97,6 @@ body {
   border: 0;
   margin-bottom: 10px;
   padding: 10px 13px; }
-
 .contactForm .wpcf7-submit {
   background-color: transparent;
   border: 2px solid #fff;
@@ -166,21 +169,24 @@ h6 {
 @media screen and (min-width: 641px) {
   h1, .fz--h1 {
     font-size: 3.125rem; }
+
   h2, .fz--h2 {
     font-size: 2.5rem; }
+
   h3, .fz--h3 {
     font-size: 1.875rem; } }
-
 @media screen and (min-width: 787px) {
   h1, .fz--h1 {
     font-size: 4.25rem; }
+
   h2, .fz--h2 {
     font-size: 3.25rem; }
+
   h3, .fz--h3 {
     font-size: 2.375rem; }
+
   h4, .fz--h4 {
     font-size: 1.75rem; } }
-
 .flybe button {
   outline: none;
   position: relative;
@@ -201,12 +207,10 @@ h6 {
   border: 2px solid #524195;
   background: transparent;
   color: #524195; }
-
 .flybe .primary {
   font-size: 1.25rem;
   border-radius: 1rem;
   height: 60px; }
-
 .flybe .primary {
   border: none;
   color: #111625;
@@ -215,19 +219,16 @@ h6 {
   background: -webkit-linear-gradient(left, #f7a11d 0%, #efc031 100%);
   background: linear-gradient(to right, #f7a11d 0%, #efc031 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7a11d', endColorstr='#efc031',GradientType=1 ); }
-
 .flybe button:hover {
   -webkit-box-shadow: 0px 5px 20px -1px rgba(17, 22, 37, 0.5);
   -moz-box-shadow: 0px 5px 20px -1px rgba(17, 22, 37, 0.5);
   box-shadow: 0px 5px 20px -1px rgba(17, 22, 37, 0.5);
   top: -3px; }
-
 .flybe button:active {
   -webkit-box-shadow: 0px 2px 10px -1px rgba(17, 22, 37, 0.5);
   -moz-box-shadow: 0px 2px 10px -1px rgba(17, 22, 37, 0.5);
   box-shadow: 0px 2px 10px -1px rgba(17, 22, 37, 0.5);
   top: -1px; }
-
 .flybe button:disabled {
   opacity: 0.5;
   pointer-events: none; }
@@ -235,92 +236,134 @@ h6 {
 @media (min-width: 576px) {
   .w-sm-25 {
     width: 25% !important; }
+
   .w-sm-50 {
     width: 50% !important; }
+
   .w-sm-75 {
     width: 75% !important; }
+
   .w-sm-100 {
     width: 100% !important; }
+
   .w-sm-auto {
     width: auto !important; }
+
   .h-sm-25 {
     height: 25% !important; }
+
   .h-sm-50 {
     height: 50% !important; }
+
   .h-sm-75 {
     height: 75% !important; }
+
   .h-sm-100 {
     height: 100% !important; }
+
   .h-sm-auto {
     height: auto !important; } }
-
 @media (min-width: 768px) {
   .w-md-25 {
     width: 25% !important; }
+
   .w-md-50 {
     width: 50% !important; }
+
   .w-md-75 {
     width: 75% !important; }
+
   .w-md-100 {
     width: 100% !important; }
+
   .w-md-auto {
     width: auto !important; }
+
   .h-md-25 {
     height: 25% !important; }
+
   .h-md-50 {
     height: 50% !important; }
+
   .h-md-75 {
     height: 75% !important; }
+
   .h-md-100 {
     height: 100% !important; }
+
   .h-md-auto {
     height: auto !important; } }
-
 @media (min-width: 992px) {
   .w-lg-25 {
     width: 25% !important; }
+
   .w-lg-50 {
     width: 50% !important; }
+
   .w-lg-75 {
     width: 75% !important; }
+
   .w-lg-100 {
     width: 100% !important; }
+
   .w-lg-auto {
     width: auto !important; }
+
   .h-lg-25 {
     height: 25% !important; }
+
   .h-lg-50 {
     height: 50% !important; }
+
   .h-lg-75 {
     height: 75% !important; }
+
   .h-lg-100 {
     height: 100% !important; }
+
   .h-lg-auto {
     height: auto !important; } }
-
 @media (min-width: 1200px) {
   .w-xl-25 {
     width: 25% !important; }
+
   .w-xl-50 {
     width: 50% !important; }
+
   .w-xl-75 {
     width: 75% !important; }
+
   .w-xl-100 {
     width: 100% !important; }
+
   .w-xl-auto {
     width: auto !important; }
+
   .h-xl-25 {
     height: 25% !important; }
+
   .h-xl-50 {
     height: 50% !important; }
+
   .h-xl-75 {
     height: 75% !important; }
+
   .h-xl-100 {
     height: 100% !important; }
+
   .h-xl-auto {
     height: auto !important; } }
-
 @media (max-width: 991px) {
+  #navbarResponsive {
+    margin-top: 10px; }
+
+  .mapHalfer iframe {
+    height: 580px;
+    margin-bottom: -8px; }
+
+  .nav-item {
+    text-align: center; }
+
   .header--corner {
     position: relative;
     width: 100%;
@@ -334,3 +377,5 @@ h6 {
       margin-left: 0; }
       .header--corner h4 br, .header--corner .fz--h4 br {
         display: none; } }
+
+/*# sourceMappingURL=custom-style.css.map */
