--- a/style/custom-style.scss
+++ b/style/custom-style.scss
@@ -332,6 +332,9 @@ h4 {
     font-size: 1.25rem;
       border-radius: 1rem;
       height: 60px;
+      p{
+        margin-bottom: 0;
+      }
   }
   .primary {
     border: none;
@@ -503,6 +506,14 @@ h4 {
 //Media Queries
 
 @media (max-width: 991px) {
+  .rooms{
+    &_single{
+      &_content{
+        height: auto;
+      }
+    }
+  }
+
   #navbarResponsive{
     margin-top: 10px;
   }
@@ -537,3 +548,53 @@ h4 {
     }
   }
 }
+
+@media (max-width: 600px) {
+
+  // h1 {
+  //   font-size: 2.5rem;
+  // }
+  // h2 {
+  //   font-size: 2rem;
+  // }
+  // h3 {
+  //   font-size: 1.75rem;
+  // }
+  // h4 {
+  //   font-size: 1.5rem;
+  // }
+  h5 {
+    font-size: 1rem;
+  }
+  // h6 {
+  //   font-size: 1rem;
+  // }
+
+}
+
+@media (max-width: 470px) {
+ .confbtn{
+   height: auto;
+ }
+}
+
+
+@media (max-width: 400px) {
+  .flybe{
+    .primary{
+          margin: 1rem 0.3rem;
+      p{
+        font-size: 0.87rem;
+      }
+    }
+  }
+
+  h4 {
+    font-size: 1.2rem;
+  }
+  h5 {
+    font-size: 0.8rem;
+  }
+}
+
+
